src/test/run-pass/negative.rs
fn main() {
    match -5 {
      -5 => {}
      _ => { fail }
    }
}