src/test/compile-fail/fail-expr.rs
// error-pattern:mismatched types

fn main() { fail 5; }
